--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body{
 
 h1{
     font-size: 60px;
+    box-shadow: 0 0 20px rgba(3, 49, 9, 0.299);
+    width: 50rem;
+    margin: auto;
+    border-radius: 10px;
 }
 
 h6{
@@ -16,12 +20,15 @@ h6{
 .heading{
     font-size: 30px;
     font-weight: 800;
+    background-color: #A5DD9B;
+    border-radius: 10px;
+    box-shadow: inset 0 0 2px rgba(3, 49, 9, 0.299);
 }
 
 #todo-box, #completed-box, #working-box{
     display: inline-grid;
     background-color: rgb(171, 68, 68);
-    box-shadow: 10px 2px 10px #416D19;
+    box-shadow: 0px 0px 10px #416D19;
     margin: 2%;
     width: 15%;
     border-radius: 20px;
@@ -31,6 +38,7 @@ h6{
 }
 
 #working-btn, #todo-btn, #completed-btn{
+    display: inline-block;
     border-radius: 10px;
     font-weight: bolder;
     background-color: #f1f1f1;
@@ -38,4 +46,41 @@ h6{
 
 #task{
     font-size: 20px;
+    box-shadow: inset 0 0 10px rgba(3, 49, 9, 0.299);
+    background-color: #A5DD9B;
+    border-radius: 30px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+}
+
+.material-symbols-outlined.md-18 { 
+    font-size: 18px;
+}
+
+.material-symbols-outlined.md-26{
+    font-size: 26px;
+}
+
+.material-symbols-outlined.md-56{
+    font-size: 56px;
+}
+
+#add-task-icon{
+    display: inline-block;
+    width: 13%;
+    margin-left: 1%;
+}
+
+.remove-icon{
+    margin-left: 3%;
+}
+
+.kanban-icon{
+    margin-left: 2%;
 }
